--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey"
-    tools:context=".Fragments.ExpenseFragment">
+    tools:context=".views.ExpenseFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -26,6 +26,98 @@
         app:backgroundTint="@color/messenger_blue"
         app:rippleColor="@color/green"
         app:tint="@color/white" />
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/cvEditExpenseLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="400dp"-->
+<!--        android:visibility="visible"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:backgroundTint="@color/white"-->
+<!--        android:outlineSpotShadowColor="@color/black"-->
+<!--        app:cardCornerRadius="12dp">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:gravity="center"-->
+<!--            android:orientation="vertical">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="22dp"-->
+<!--                android:gravity="center"-->
+<!--                android:text="Edit Expense Details"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="22sp"-->
+<!--                android:textStyle="bold|italic" />-->
+
+<!--            <EditText-->
+<!--                android:id="@+id/etEditExpTitle"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="44dp"-->
+<!--                android:layout_marginBottom="12dp"-->
+<!--                android:background="@drawable/edittext_background"-->
+<!--                android:gravity="start"-->
+<!--                android:hint="Title..."-->
+<!--                android:padding="12dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textColorHint="@color/visible_grey"-->
+<!--                android:textStyle="italic" />-->
+
+<!--            <EditText-->
+<!--                android:id="@+id/etEditExpDesc"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginBottom="12dp"-->
+<!--                android:background="@drawable/edittext_background"-->
+<!--                android:gravity="start"-->
+<!--                android:hint="Description..."-->
+<!--                android:padding="12dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textColorHint="@color/visible_grey"-->
+<!--                android:textStyle="italic" />-->
+
+<!--            <EditText-->
+<!--                android:id="@+id/etEditExpDate"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginBottom="12dp"-->
+<!--                android:background="@drawable/edittext_background"-->
+<!--                android:gravity="start"-->
+<!--                android:hint="Date..."-->
+<!--                android:padding="12dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textColorHint="@color/visible_grey"-->
+<!--                android:textStyle="italic" />-->
+
+<!--            <EditText-->
+<!--                android:id="@+id/etEditExpAmount"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginBottom="12dp"-->
+<!--                android:background="@drawable/edittext_background"-->
+<!--                android:gravity="start"-->
+<!--                android:hint="Amount spent..."-->
+<!--                android:padding="12dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textColorHint="@color/visible_grey"-->
+<!--                android:textStyle="italic" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btnUpdateExp"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:backgroundTint="@color/messenger_blue"-->
+<!--                android:text="Update"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:textStyle="italic" />-->
+<!--        </LinearLayout>-->
+<!--    </androidx.cardview.widget.CardView>-->
 
 
 </RelativeLayout>
