--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey"
-    tools:context=".Fragments.ExpenseFragment">
+    tools:context=".views.ExpenseFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewIncome"
