--- a/app/src/main/res/drawable/ic_email.xml
+++ b/app/src/main/res/drawable/ic_email.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M2,6a2,2 0,0 1,2 -2h16a2,2 0,0 1,2 2v12a2,2 0,0 1,-2 2L4,20a2,2 0,0 1,-2 -2L2,6zM5.519,6L12,11.671 18.481,6L5.52,6zM20,7.329l-7.341,6.424a1,1 0,0 1,-1.318 0L4,7.329L4,18h16L20,7.329z"
-      android:fillColor="#0D0D0D"/>
+      android:fillColor="#fff"/>
 </vector>
