--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,8 +17,8 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_user_pic"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:src="@drawable/ic_user_colorful"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,14 +27,13 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="7dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_user_pic"
             app:layout_constraintTop_toTopOf="parent">
-
             <TextView
                 android:id="@+id/tv_user_name"
                 android:layout_width="match_parent"
@@ -44,8 +43,7 @@
                 android:breakStrategy="balanced"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="RKP Sx7"
-
+                android:text="__________"
                 android:textColor="#fff"
                 android:textSize="18sp"
                 android:textStyle="bold|italic" />
@@ -58,9 +56,39 @@
                 android:layout_marginStart="7dp"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="demo@gmail.com"
+                android:text="_______"
                 android:textColor="#fff"
                 android:textStyle="italic" />
+
+            <RelativeLayout
+                android:id="@+id/btn_settings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="7dp">
+
+                <ImageView
+                    android:id="@+id/st_icon"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_settings_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="7dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_toEndOf="@+id/st_icon"
+                    android:drawablePadding="12dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="Settings"
+                    android:textColor="@color/messenger_blue"
+                    android:textStyle="italic" />
+
+            </RelativeLayout>
+
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
